--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,11 @@
+# Annotation-related messages:
 NotNull={0} is a required field
 NotEmpty={0} field must have a value
-NotBlank={0} field must not be blank
+NotBlank={0} field cannot be blank
 Email={0} field must be a valid email address
 Past={0} the date should be earlier than today
 
+# Field-related messages:
 profile.firstName = First Name
 profile.lastName = Last Name
 profile.gender = Gender
@@ -11,3 +13,14 @@ profile.email = Email
 profile.dateOfBirth = Date of birth
 userName = Username
 password = Password
+
+Word.blank = You cannot enter a blank word.
+Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
+
+# Page components:
+IndexPage.title =
+IndexPage.header =
+IndexPage.bodyText =
+ErrorPage.title =
+ErrorPage.header =
+ErrorPage.bodyText =
