Removed @Data annotation from domain objects and added @Geter & @Setter instead.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,14 @@ password = Password
 Word.blank = You cannot enter a blank word.
 Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
 
+Ad.text.empty = You cannot leave the ad empty!
+Ad.text.size = Ad text must be between {3} and {1} letters.
+Ad.expiryDate.futureOrPresent = Ad expiry date must be in the future.
+
+AdCriteria.City.size= City name cannot contain more than {1} letters.
+AdCriteria.State.size= State name cannot contain more than {1} letters.
+AdCriteria.Country.size= Country name cannot contain more than {1} letters.
+
 # Page components:
 IndexPage.title =
 IndexPage.header =
