Internationalization added for login and sign up pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,18 +1,15 @@
-# Annotation-related messages:
-NotNull={0} is a required field
-NotEmpty={0} field must have a value
-NotBlank={0} field cannot be blank
-Email={0} field must be a valid email address
-Past={0} the date should be earlier than today
+# All the content of the pages for English language are in this file
 
-# Field-related messages:
-profile.firstName = First Name
-profile.lastName = Last Name
-profile.gender = Gender
-profile.email = Email
-profile.dateOfBirth = Date of birth
-userName = Username
-password = Password
+#Login and Singup page
+login.lang.en = English
+login.lang.fa = Persian
+login.signin = Sign in
+login.signup = Sign up
+login.username = Username
+login.password = Password
+login.maleGender = Male
+login.femaleGender = Female
+
 
 Word.blank = You cannot enter a blank word.
 Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
