Created JSP "userList" used to activate user(s), set user(s) role(s), updated postAndUserManagement_Aser.js, AdminController and externalized messages accordingly.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,15 @@ IndexPage.bodyText =
 ErrorPage.title =
 ErrorPage.header =
 ErrorPage.bodyText =
+
+UserList.title = User list
+UserList.header = List of current users
+UserList.username = Username
+UserList.Enabled = Activated?
+UserList.Role = Current role
+UserList.newRole = Set new role
+UserList.Enable = Activate
+UserList.SetAdmin = Admin
+UserList.SetContentManager = Content manager
+UserList.SetMarketingManager = Marketing manager
+UserList.SetUser = Normal user
