Update the Admin stack & the userList page.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,6 +37,7 @@ UserList.Enabled = Activated?
 UserList.Role = Current role
 UserList.newRole = Set new role
 UserList.Enable = Activate
+UserList.Disable = Deactivate
 UserList.SetAdmin = Admin
 UserList.SetContentManager = Content manager
 UserList.SetMarketingManager = Marketing manager
