Updated the Admin stack & the userList page. Completed the ajax calls to activate/deactivate users and to change their roles. This requirement is now finished.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,7 +35,7 @@ UserList.header = List of current users
 UserList.username = Username
 UserList.Enabled = Activated?
 UserList.Role = Current role
-UserList.newRole = Set new role
+UserList.SetRole = Change role
 UserList.Enable = Activate
 UserList.Disable = Deactivate
 UserList.SetAdmin = Admin
