--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,3 +42,19 @@ UserList.SetAdmin = Admin
 UserList.SetContentManager = Content manager
 UserList.SetMarketingManager = Marketing manager
 UserList.SetUser = Normal user
+
+Navbar.deactivatedUsers = Deactivated users
+Navbar.manageRoles = User roles
+Navbar.unhealthyPosts = Unhealthy posts
+Navbar.unhealthyWords = Unhealthy words
+
+PostList.header = List of unhealthy posts
+PostList.postText = Post text
+PostList.Decision = Decision
+PostList.approvePost = Approve?
+
+WordList.header = List of unhealthy words
+WordList.delete = Delete
+
+Yes = Yes
+No = No
