JWT added and internationalization changed from Persion language to Spanish

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,7 +2,7 @@
 
 #Login and Singup page
 login.lang.en = English
-login.lang.fa = Persian
+login.lang.spa = Spanish
 login.signin = Sign in
 login.signup = Sign up
 login.username = Username
