Done the UnhealthyWords stack, except the AJAX calls.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,6 +55,7 @@ PostList.approvePost = Approve?
 
 WordList.header = List of unhealthy words
 WordList.delete = Delete
+WordList.add = Add new word
 
 Yes = Yes
 No = No
