--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,84 @@
 # All the content of the pages for English language are in this file
 
-#Login and Singup page
+########################################################
+#Navebar file
+########################################################
+navebar.home = Home
+navebar.users = Users
+navebar.profile = Profile
+navebar.setting = Setting
+navebar.editProfile = Edit Profile
+navebar.logout = Logout
+navebar.search = Search...
+navebar.notification = Notification
+
+########################################################
+#Denied file
+########################################################
+denied.title = ACCESS DENIED
+
+########################################################
+#Edit Profile file
+########################################################
+editProfile.changeInfo = Change Info
+editProfile.profilePic = Profile Picture
+editProfile.changePass = Change Password
+editProfile.firstName = First Name
+editProfile.lastName = Last Name
+editProfile.occupation = Occupation
+editProfile.email = Email
+editProfile.country = Country
+editProfile.state = State
+editProfile.city = City
+editProfile.save = Save
+editProfile.accountSetting = Account Setting
+editProfile.newPass = New Password
+editProfile.repeatPass = Repeat Password
+editProfile.changeProfilePic = Change Profile Picture
+editProfile.upload = Upload
+editProfile.cancel = Cancel
+editProfile.helpCenter = Help Center
+editProfile.about = About
+editProfile.privacy = Privacy Policy
+editProfile.community = Community Guidelines
+editProfile.cookies = Cookies Policy
+editProfile.career = Career
+editProfile.forum = Forum
+editProfile.language = Language
+editProfile.copyright = Copyright Policy
+editProfile.copy = Copyright 2019
+
+
+#editProfile.blocking = Blocking
+#editProfile.msg1 = See your list,and make changes if you'd like
+#editProfile.msg2 = You are not blocking anyone
+#editProfile.msg3 = Need to block or report someone? Go to the profile of the person you want to block and select \"Block or Report\" from the drop-down menu at the top of the profile summery
+#editProfile.msg4 = Note: After you have blocked the person, Any previous profile views of yours and of the other person will disappear from each of your \"Who's viewed your profile\" sections.
+#editProfile.request = Requests
+#editProfile.accept = Accept
+
+########################################################
+#Index page
+########################################################
+index.viewProfile = View Profile
+index.suggestions = Suggestions
+index.post = Post
+index.video = Your browser does not support HTML5 video.
+index.like = Like
+index.comment = Comment
+index.commentPlaceholder = write your comment here
+index.loadMore = Load More
+index.weather = FAIRFIELD WEATHER
+index.newPost = New Post
+index.newPostPlaceholder = Write here
+index.selectImage = Select Image
+index.selectVideo = Select Video
+index.follow = Follow
+index.notifyAllUser = Notify all users
+
+########################################################
+#Login and Sing up page
+########################################################
 login.lang.en = English
 login.lang.spa = Spanish
 login.signin = Sign in
@@ -9,6 +87,39 @@ login.username = Username
 login.password = Password
 login.maleGender = Male
 login.femaleGender = Female
+login.error = Authentication Failed!
+
+########################################################
+#Post file
+########################################################
+post.addText = Add Text
+post.uploadImg = Image Upload:
+post.videoUpload = Video Upload:
+post.notify = Notify all users
+post.addPost = Add Post
+post.userId = User Id:
+post.createAt = Created at:
+
+
+########################################################
+#Profile file
+########################################################
+profile.changeImg = Change Image
+profile.from = From
+profile.livesIn = Lives in
+profile.editProfile = Edit Profile
+profile.myName = My name is
+profile.msg1 = but you can call me
+profile.msg2 = If you want to contact me please don't hesitate to email me by
+
+########################################################
+#ProfileList file
+########################################################
+profileList.follow = Follow
+profileList.viewProfile = View Profile
+profileList.suggestion = Suggestions
+profileList.searchResult = Search Result
+profileList.noresult = No Result Found!
 
 
 Word.blank = You cannot enter a blank word.
