--- a/src/main/resources/messages_spa.properties
+++ b/src/main/resources/messages_spa.properties
@@ -1,6 +1,75 @@
-# All the content of the pages for Persian language are in this file
+# All the content of the pages for Spanish language are in this file
 
-#Login and Singup page
+########################################################
+#Navebar file
+########################################################
+navebar.home = Casa
+navebar.users = Los usuarios
+navebar.profile = Perfil
+navebar.setting = Ajuste
+navebar.editProfile = Editar perfil
+navebar.logout = Cerrar sesi\u00F3n
+navebar.search = Buscar...
+navebar.notification = Notificaci\u00F3n
+
+########################################################
+#Denied file
+########################################################
+denied.title = ACCESO DENEGADO
+
+########################################################
+#Edit Profile file
+########################################################
+editProfile.changeInfo = Cambiar informaci\u00F3n
+editProfile.profilePic = Foto de perfil
+editProfile.changePass = Cambia la contrase\u00F1a
+editProfile.firstName = Nombre de pila
+editProfile.lastName = Apellido
+editProfile.occupation = Ocupaci\u00F3n
+editProfile.email = Email
+editProfile.country = Pa\u00EDs
+editProfile.state = Estado
+editProfile.city = Ciudad
+editProfile.save = Salvar
+editProfile.accountSetting = Configuraci\u00F3n de cuenta
+editProfile.newPass = Nueva contrase\u00F1a
+editProfile.repeatPass = Repite la contrase\u00F1a
+editProfile.changeProfilePic = Cambiar foto de perfil
+editProfile.upload = Subir
+editProfile.cancel = Cancelar
+editProfile.helpCenter = Centro de ayuda
+editProfile.about = Acerca de
+editProfile.privacy = Pol\u00EDtica de privacidad
+editProfile.community = Principios de la Comunidad
+editProfile.cookies = Pol\u00EDtica de cookies
+editProfile.career = Carrera
+editProfile.forum = Foro
+editProfile.language = Idioma
+editProfile.copyright = Pol\u00EDtica de derechos de autor
+editProfile.copy = Copyright 2019
+
+########################################################
+#Index page
+########################################################
+index.viewProfile = Ver perfil
+index.suggestions = Sugerencias
+index.post = Enviar
+index.video = Su navegador no admite video HTML5.
+index.like = Me gusta
+index.comment = Comentario
+index.commentPlaceholder = escribe tu comentario aqui
+index.loadMore = Carga m\u00E1s
+index.weather = TIEMPO FAIRFIELD
+index.newPost = Nueva publicaci\u00F3n
+index.newPostPlaceholder = Escriba aqui
+index.selectImage = Seleccionar imagen
+index.selectVideo = Seleccionar video
+index.follow = Seguir
+index.notifyAllUser = Notificar a todos los usuarios
+
+########################################################
+#Login and Sing up page
+########################################################
 login.lang.en = Ingl\u00E9s
 login.lang.spa = Espa\u00F1ol
 login.signin = Registrarse
@@ -9,6 +78,39 @@ login.username = Nombre de usuario
 login.password = Contrase\u00F1a
 login.maleGender = Masculino
 login.femaleGender = Hembra
+
+
+########################################################
+#Post file
+########################################################
+post.addText = A\u00F1adir texto
+post.uploadImg = Carga de imagen:
+post.videoUpload = Subida de video:
+post.notify = Notificar a todos los usuarios
+post.addPost = Agregar publicaci\u00F3n
+post.userId = ID de usuario:
+post.createAt = Creado en:
+
+########################################################
+#Profile file
+########################################################
+profile.changeImg = Cambiar imagen
+profile.from = Desde
+profile.livesIn = Vive en
+profile.editProfile = Editar perfil
+profile.myName = Me llamo
+profile.msg1 = pero t\u00FA puedes llamarme
+profile.msg2 = Si quieres contactarme no dudes en enviarme un correo electr\u00F3nico
+
+
+########################################################
+#ProfileList file
+########################################################
+profileList.follow = Seguir
+profileList.viewProfile = Ver perfil
+profileList.suggestion = Sugerencias
+profileList.searchResult = Resultado de b\u00FAsqueda
+profileList.noresult = \u00A1No se han encontrado resultados!
 
 
 Word.blank = No puede ingresar una palabra en blanco.
