Internationalization added to the Admin pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,10 @@ navebar.editProfile = Edit Profile
 navebar.logout = Logout
 navebar.search = Search...
 navebar.notification = Notification
+navbar.deactivatedUsers = Deactivated users
+navbar.manageRoles = User roles
+navbar.unhealthyPosts = Unhealthy posts
+navbar.unhealthyWords = Unhealthy words
 
 ########################################################
 #Denied file
@@ -48,14 +52,6 @@ editProfile.language = Language
 editProfile.copyright = Copyright Policy
 editProfile.copy = Copyright 2019
 
-
-#editProfile.blocking = Blocking
-#editProfile.msg1 = See your list,and make changes if you'd like
-#editProfile.msg2 = You are not blocking anyone
-#editProfile.msg3 = Need to block or report someone? Go to the profile of the person you want to block and select \"Block or Report\" from the drop-down menu at the top of the profile summery
-#editProfile.msg4 = Note: After you have blocked the person, Any previous profile views of yours and of the other person will disappear from each of your \"Who's viewed your profile\" sections.
-#editProfile.request = Requests
-#editProfile.accept = Accept
 
 ########################################################
 #Index page
@@ -121,26 +117,24 @@ profileList.suggestion = Suggestions
 profileList.searchResult = Search Result
 profileList.noresult = No Result Found!
 
+########################################################
+#Unhealthy words and posts file
+########################################################
+PostList.header = List of unhealthy posts
+PostList.postText = Post text
+PostList.Decision = Decision
+PostList.approvePost = Approve?
 
-Word.blank = You cannot enter a blank word.
-Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
+WordList.header = List of unhealthy words
+WordList.delete = Delete
+WordList.add = Add new word
 
-Ad.text.empty = You cannot leave the ad empty!
-Ad.text.size = Ad text must be between {3} and {1} letters.
-Ad.expiryDate.futureOrPresent = Ad expiry date must be in the future.
+Yes = Yes
+No = No
 
-AdCriteria.City.size= City name cannot contain more than {1} letters.
-AdCriteria.State.size= State name cannot contain more than {1} letters.
-AdCriteria.Country.size= Country name cannot contain more than {1} letters.
-
-# Page components:
-IndexPage.title =
-IndexPage.header =
-IndexPage.bodyText =
-ErrorPage.title =
-ErrorPage.header =
-ErrorPage.bodyText =
-
+########################################################
+#User List file
+########################################################
 UserList.title = User list
 UserList.header = List of current users
 UserList.username = Username
@@ -154,19 +148,16 @@ UserList.SetContentManager = Content manager
 UserList.SetMarketingManager = Marketing manager
 UserList.SetUser = Normal user
 
-Navbar.deactivatedUsers = Deactivated users
-Navbar.manageRoles = User roles
-Navbar.unhealthyPosts = Unhealthy posts
-Navbar.unhealthyWords = Unhealthy words
 
-PostList.header = List of unhealthy posts
-PostList.postText = Post text
-PostList.Decision = Decision
-PostList.approvePost = Approve?
+Word.blank = You cannot enter a blank word.
+Word.size = An unhealthy word must have at least {2} letters and no more than {1} letters.
 
-WordList.header = List of unhealthy words
-WordList.delete = Delete
-WordList.add = Add new word
+Ad.text.empty = You cannot leave the ad empty!
+Ad.text.size = Ad text must be between {3} and {1} letters.
+Ad.expiryDate.futureOrPresent = Ad expiry date must be in the future.
 
-Yes = Yes
-No = No
+AdCriteria.City.size= City name cannot contain more than {1} letters.
+AdCriteria.State.size= State name cannot contain more than {1} letters.
+AdCriteria.Country.size= Country name cannot contain more than {1} letters.
+
+upload.title = Spring Boot - Upload Status
