--- a/src/main/resources/messages_spa.properties
+++ b/src/main/resources/messages_spa.properties
@@ -11,6 +11,10 @@ navebar.editProfile = Editar perfil
 navebar.logout = Cerrar sesi\u00F3n
 navebar.search = Buscar...
 navebar.notification = Notificaci\u00F3n
+navbar.deactivatedUsers = Usuarios desactivados
+navbar.manageRoles = Roles del usuario
+navbar.unhealthyPosts = Publicaciones poco saludables
+navbar.unhealthyWords = Palabras poco saludables
 
 ########################################################
 #Denied file
@@ -113,6 +117,38 @@ profileList.searchResult = Resultado de b\u00FAsqueda
 profileList.noresult = \u00A1No se han encontrado resultados!
 
 
+########################################################
+#Unhealthy words and posts file
+########################################################
+PostList.header = List of unhealthy posts
+PostList.postText = Post text
+PostList.Decision = Decision
+PostList.approvePost = Approve?
+
+WordList.header = List of unhealthy words
+WordList.delete = Delete
+WordList.add = Add new word
+
+Yes = Yes
+No = No
+
+########################################################
+#User List file
+########################################################
+UserList.title = Lista de usuarios
+UserList.header = Lista de usuarios actuales
+UserList.username = Nombre de usuario
+UserList.Enabled = \u00BFActivada?
+UserList.Role = Rol actual
+UserList.SetRole = Establecer un nuevo rol
+UserList.Enable = Activar
+UserList.Disable = Desactivar
+UserList.SetAdmin = Administraci\u00F3n
+UserList.SetContentManager = Gestor de contenidos
+UserList.SetMarketingManager = Gerente de marketing
+UserList.SetUser = Usuario normal
+
+
 Word.blank = No puede ingresar una palabra en blanco.
 Word.size = Una palabra poco saludable debe tener al menos {2} letras y no m\u00E1s de {1} letras.
 
@@ -124,22 +160,4 @@ AdCriteria.City.size= El nombre de la ciudad no puede contener m\u00E1s de {1} l
 AdCriteria.State.size= El nombre del estado no puede contener m\u00E1s de {1} letras.
 AdCriteria.Country.size= El nombre del pa\u00EDs no puede contener m\u00E1s de {1} letras.
 
-# Page components:
-IndexPage.title =
-IndexPage.header =
-IndexPage.bodyText =
-ErrorPage.title =
-ErrorPage.header =
-ErrorPage.bodyText =
-
-UserList.title = Lista de usuarios
-UserList.header = Lista de usuarios actuales
-UserList.username = Nombre de usuario
-UserList.Enabled = \u00BFActivada?
-UserList.Role = Rol actual
-UserList.newRole = Establecer un nuevo rol
-UserList.Enable = Activar
-UserList.SetAdmin = Administraci\u00F3n
-UserList.SetContentManager = Gestor de contenidos
-UserList.SetMarketingManager = Gerente de marketing
-UserList.SetUser = Usuario normal
+upload.title = Spring Boot - Estado de carga
